TOMEE-1144 better handling of process + handling CATALINA_OPTS
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1579708 13f79535-47bb-0310-9956-ffa450edef68